[I18N] *: improve Vietnamese translations

--- a/addons/account/i18n/vi.po
+++ b/addons/account/i18n/vi.po
@@ -2503,7 +2503,7 @@ msgid ""
 "An analytic default requires at least an analytic account or an analytic "
 "tag."
 msgstr ""
-"Mặc định phân tích yêu cầu ít nhất một tài khoản phân tích hoặc một thẻ phân"
+"Mặc định phân tích yêu cầu ít nhất một tài khoản quản trị hoặc một thẻ phân"
 " tích."
 
 #. module: account
