--- a/addons/analytic/i18n/vi.po
+++ b/addons/analytic/i18n/vi.po
@@ -28,7 +28,7 @@ msgstr ""
 #. module: analytic
 #: model_terms:ir.ui.view,arch_db:analytic.view_account_analytic_account_form
 msgid "<span class=\"o_stat_text\">Gross Margin</span>"
-msgstr "<span class=\"o_stat_text\">Tổng biên</span>"
+msgstr "<span class=\"o_stat_text\">Biên lợi nhuận gộp</span>"
 
 #. module: analytic
 #: model:ir.model.fields,field_description:analytic.field_account_analytic_account__message_needaction
@@ -45,7 +45,7 @@ msgstr "Có hiệu lực"
 #: model_terms:ir.actions.act_window,help:analytic.action_account_analytic_account_form
 #: model_terms:ir.actions.act_window,help:analytic.action_analytic_account_form
 msgid "Add a new analytic account"
-msgstr "Bấm để thêm tài khoản phân tích mới"
+msgstr "Bấm để thêm tài khoản quản trị mới"
 
 #. module: analytic
 #: model_terms:ir.actions.act_window,help:analytic.account_analytic_tag_action
@@ -67,12 +67,12 @@ msgstr "Tổng tiền"
 #: model_terms:ir.ui.view,arch_db:analytic.view_account_analytic_account_search
 #: model_terms:ir.ui.view,arch_db:analytic.view_account_analytic_line_filter
 msgid "Analytic Account"
-msgstr "Tài khoản quản trị"
+msgstr "Tài khoản Quản trị"
 
 #. module: analytic
 #: model:ir.model,name:analytic.model_account_analytic_distribution
 msgid "Analytic Account Distribution"
-msgstr "Phân bổ KT Quản trị"
+msgstr "Phân bổ Tài khoản Quản trị"
 
 #. module: analytic
 #: model:ir.actions.act_window,name:analytic.account_analytic_group_action
@@ -90,14 +90,14 @@ msgstr "Kế toán Quản trị"
 #. module: analytic
 #: model:res.groups,name:analytic.group_analytic_tags
 msgid "Analytic Accounting Tags"
-msgstr "Thẻ Tài khoản Quản trị"
+msgstr "Thẻ Kế toán Quản trị"
 
 #. module: analytic
 #: model:ir.actions.act_window,name:analytic.action_account_analytic_account_form
 #: model:ir.model.fields,field_description:analytic.field_account_analytic_tag__analytic_distribution_ids
 #: model_terms:ir.ui.view,arch_db:analytic.view_account_analytic_account_list
 msgid "Analytic Accounts"
-msgstr "Tài khoản quản trị"
+msgstr "Tài khoản Quản trị"
 
 #. module: analytic
 #: model:ir.model,name:analytic.model_account_analytic_group
@@ -115,7 +115,7 @@ msgstr "Phân bổ KT Quản trị"
 #: model_terms:ir.ui.view,arch_db:analytic.view_account_analytic_line_pivot
 #: model_terms:ir.ui.view,arch_db:analytic.view_account_analytic_line_tree
 msgid "Analytic Entries"
-msgstr "Bút toán quản trị"
+msgstr "Bút toán KT Quản trị"
 
 #. module: analytic
 #: model_terms:ir.ui.view,arch_db:analytic.view_account_analytic_line_form
@@ -140,7 +140,7 @@ msgstr "Phát sinh KT Quản trị"
 #. module: analytic
 #: model:ir.model.fields,field_description:analytic.field_account_analytic_tag__name
 msgid "Analytic Tag"
-msgstr "Thẻ TK Quản trị"
+msgstr "Thẻ KT Quản trị"
 
 #. module: analytic
 #: model:ir.actions.act_window,name:analytic.account_analytic_tag_action
@@ -148,7 +148,7 @@ msgstr "Thẻ TK Quản trị"
 #: model_terms:ir.ui.view,arch_db:analytic.account_analytic_tag_form_view
 #: model_terms:ir.ui.view,arch_db:analytic.account_analytic_tag_tree_view
 msgid "Analytic Tags"
-msgstr "Thẻ TK Quản trị"
+msgstr "Thẻ KT Quản trị"
 
 #. module: analytic
 #: model_terms:ir.ui.view,arch_db:analytic.account_analytic_tag_form_view
@@ -183,7 +183,7 @@ msgstr "Số dư:"
 #: model:ir.model.fields,field_description:analytic.field_account_analytic_line__category
 #: model_terms:ir.ui.view,arch_db:analytic.view_account_analytic_line_filter
 msgid "Category"
-msgstr "Chuyên mục"
+msgstr "Nhóm"
 
 #. module: analytic
 #: model:ir.actions.act_window,name:analytic.action_analytic_account_form
@@ -221,7 +221,7 @@ msgstr "Tên đầy đủ"
 #. module: analytic
 #: model:ir.model,name:analytic.model_res_config_settings
 msgid "Config Settings"
-msgstr "Thiết lập cấu hình"
+msgstr "Thiết lập Cấu hình"
 
 #. module: analytic
 #: model:ir.model.fields,help:analytic.field_account_analytic_line__product_uom_category_id
@@ -317,7 +317,7 @@ msgstr "Người theo dõi (Các đối tác)"
 #. module: analytic
 #: model:ir.actions.act_window,name:analytic.account_analytic_line_action
 msgid "Gross Margin"
-msgstr "Tổng biên"
+msgstr "Biên Lợi nhuận gộp"
 
 #. module: analytic
 #: model:ir.model.fields,field_description:analytic.field_account_analytic_account__group_id
@@ -529,12 +529,12 @@ msgstr "Tìm kiếm Phát sinh KT Quản trị"
 #. module: analytic
 #: model_terms:ir.ui.view,arch_db:analytic.account_analytic_tag_view_search
 msgid "Search Analytic Tags"
-msgstr "Search Analytic Tags"
+msgstr "Tìm kiếm Thẻ Quản trị"
 
 #. module: analytic
 #: model:ir.model.fields,help:analytic.field_account_analytic_tag__active
 msgid "Set active to false to hide the Analytic Tag without removing it."
-msgstr "Thiết đặt hành động là sai để ẩn Thẻ phân tích mà không xóa thẻ."
+msgstr "Thiết đặt hành động là sai để ẩn Thẻ Quản trị mà không cần xóa thẻ."
 
 #. module: analytic
 #: model:ir.model.fields,field_description:analytic.field_account_analytic_line__tag_ids
@@ -554,11 +554,13 @@ msgid ""
 "The selected account belongs to another company than the one you're trying "
 "to create an analytic item for"
 msgstr ""
+"Tài khoản được chọn thuộc về một công ty khác với công ty mà bạn đang định "
+"tạo một phát sinh kế toán quản trị."
 
 #. module: analytic
 #: model_terms:ir.actions.act_window,help:analytic.account_analytic_group_action
 msgid "This allows you to classify your analytic accounts."
-msgstr ""
+msgstr "Cái này cho phép bạn phân loại các tài khoản quản trị."
 
 #. module: analytic
 #: model_terms:ir.ui.view,arch_db:analytic.view_account_analytic_line_tree
@@ -583,7 +585,7 @@ msgstr "Bộ đếm Thông điệp chưa đọc"
 #. module: analytic
 #: model:ir.model.fields,field_description:analytic.field_account_analytic_line__product_uom_category_id
 msgid "UoM Category"
-msgstr "Danh mục đơn vị"
+msgstr "Nhóm đơn vị tính"
 
 #. module: analytic
 #: model:ir.model.fields,field_description:analytic.field_account_analytic_line__user_id
