--- a/addons/mail/i18n/vi.po
+++ b/addons/mail/i18n/vi.po
@@ -1705,7 +1705,7 @@ msgstr "Chế độ soạn thảo"
 #. module: mail
 #: model:ir.model,name:mail.model_res_config_settings
 msgid "Config Settings"
-msgstr "Thiết lập cấu hình"
+msgstr "Thiết lập Cấu hình"
 
 #. module: mail
 #: model_terms:ir.ui.view,arch_db:mail.res_config_settings_view_form
