--- a/addons/microsoft_calendar/i18n/vi.po
+++ b/addons/microsoft_calendar/i18n/vi.po
@@ -128,7 +128,7 @@ msgstr "Client Secret"
 #. module: microsoft_calendar
 #: model:ir.model,name:microsoft_calendar.model_res_config_settings
 msgid "Config Settings"
-msgstr "Thiết lập cấu hình"
+msgstr "Thiết lập Cấu hình"
 
 #. module: microsoft_calendar
 #. openerp-web
