--- a/addons/mrp_account/i18n/vi.po
+++ b/addons/mrp_account/i18n/vi.po
@@ -28,12 +28,12 @@ msgstr ""
 #: model:ir.model.fields,field_description:mrp_account.field_mrp_workcenter__costs_hour_account_id
 #: model_terms:ir.ui.view,arch_db:mrp_account.mrp_production_form_view_inherited
 msgid "Analytic Account"
-msgstr "Tài khoản phân tích"
+msgstr "Tài khoản quản trị"
 
 #. module: mrp_account
 #: model:ir.model,name:mrp_account.model_account_analytic_line
 msgid "Analytic Line"
-msgstr "Dòng phân tích"
+msgstr "Phát sinh KT Quản trị"
 
 #. module: mrp_account
 #: model:ir.model.fields,help:mrp_account.field_mrp_production__analytic_account_id
@@ -41,8 +41,8 @@ msgid ""
 "Analytic account in which cost and revenue entries will take        place "
 "for financial management of the manufacturing order."
 msgstr ""
-"Tài khoản phân tích nơi thực hiện bút toán chi phí và doanh thu để quản lý "
-"tài chính cho đơn sản xuất. "
+"Tài khoản quản trị nơi thực hiện bút toán chi phí và doanh thu để quản lý "
+"tài chính cho lệnh sản xuất. "
 
 #. module: mrp_account
 #: model:ir.model.fields,help:mrp_account.field_mrp_bom__analytic_account_id
@@ -50,8 +50,8 @@ msgid ""
 "Analytic account in which cost and revenue entries will take place for "
 "financial management of the manufacturing order."
 msgstr ""
-"Tài khoản phân tích nơi thực hiện bút toán chi phí và doanh thu để quản lý "
-"tài chính cho đơn sản xuất. "
+"Tài khoản quản trị nơi thực hiện bút toán chi phí và doanh thu để quản lý "
+"tài chính cho lệnh sản xuất. "
 
 #. module: mrp_account
 #: model:ir.model,name:mrp_account.model_mrp_bom
@@ -137,7 +137,7 @@ msgstr "Số đơn sản xuất"
 #. module: mrp_account
 #: model:ir.model.fields,field_description:mrp_account.field_mrp_workorder__mo_analytic_account_line_id
 msgid "Mo Analytic Account Line"
-msgstr "Dòng tài khoản phân tích MO"
+msgstr "Phát sinh KT quản trị MO"
 
 #. module: mrp_account
 #: model:ir.model,name:mrp_account.model_product_product
@@ -190,12 +190,12 @@ msgstr "Định giá"
 #. module: mrp_account
 #: model:ir.model.fields,field_description:mrp_account.field_mrp_workorder__wc_analytic_account_line_id
 msgid "Wc Analytic Account Line"
-msgstr "Dòng tài khoản phân tích xưởng"
+msgstr "Phát sinh KT quản trị WC"
 
 #. module: mrp_account
 #: model:ir.model,name:mrp_account.model_mrp_workcenter
 msgid "Work Center"
-msgstr "Công đoạn sản xuất"
+msgstr "Năng lực Sản xuất"
 
 #. module: mrp_account
 #: model:ir.model,name:mrp_account.model_mrp_workorder
@@ -215,7 +215,7 @@ msgstr "Nhật ký sản xuất của Năng lực sản xuất"
 #. module: mrp_account
 #: model:ir.model.fields,field_description:mrp_account.field_account_analytic_account__workcenter_ids
 msgid "Workcenters"
-msgstr "Xưởng"
+msgstr "Năng lực Sản xuất"
 
 #. module: mrp_account
 #: code:addons/mrp_account/models/stock_move.py:0
