--- a/addons/product_expiry/i18n/vi.po
+++ b/addons/product_expiry/i18n/vi.po
@@ -74,7 +74,7 @@ msgstr "Tốt nhất trước:"
 #. module: product_expiry
 #: model:ir.model,name:product_expiry.model_res_config_settings
 msgid "Config Settings"
-msgstr "Thiết lập cấu hình"
+msgstr "Thiết lập Cấu hình"
 
 #. module: product_expiry
 #: model_terms:ir.ui.view,arch_db:product_expiry.confirm_expiry_view
