--- a/addons/product_images/i18n/vi.po
+++ b/addons/product_images/i18n/vi.po
@@ -59,7 +59,7 @@ msgstr "Hủy"
 #. module: product_images
 #: model:ir.model,name:product_images.model_res_config_settings
 msgid "Config Settings"
-msgstr "Thiết lập cấu hình"
+msgstr "Thiết lập Cấu hình"
 
 #. module: product_images
 #: model:ir.model.fields,field_description:product_images.field_product_fetch_image_wizard__create_uid
