--- a/addons/project/i18n/vi.po
+++ b/addons/project/i18n/vi.po
@@ -877,17 +877,17 @@ msgstr "Cho phép nhiệm vụ phụ"
 #: model:ir.model.fields,field_description:project.field_project_project__analytic_account_id
 #: model:ir.model.fields,field_description:project.field_project_task__analytic_account_id
 msgid "Analytic Account"
-msgstr "Tài khoản quản trị"
+msgstr "Tài khoản Quản trị"
 
 #. module: project
 #: model:ir.model.fields,field_description:project.field_project_task__analytic_tag_ids
 msgid "Analytic Tag"
-msgstr "Thẻ phân tích"
+msgstr "Thẻ Quản trị"
 
 #. module: project
 #: model:ir.model,name:project.model_account_analytic_tag
 msgid "Analytic Tags"
-msgstr "Thẻ phân tích"
+msgstr "Thẻ Quản trị"
 
 #. module: project
 #: model:ir.model.fields,help:project.field_project_project__analytic_account_id
@@ -906,9 +906,9 @@ msgid ""
 "an analytic account to record cost and revenue on your task. If empty, the "
 "analytic account of the project will be used."
 msgstr ""
-"Tài khoản phân tích liên kết với nhiệm vụ này để quản lý tài chính. Sử dụng "
-"tài khoản phân tích để ghi lại chi phí và doanh thu của nhiệm vụ. Nếu để "
-"trống, tài khoản phân tích của dự án sẽ được sử dụng."
+"Tài khoản quản trị liên kết với nhiệm vụ này để quản lý tài chính. Sử dụng "
+"tài khoản quản trị để ghi lại chi phí và doanh thu của nhiệm vụ. Nếu để "
+"trống, tài khoản quản trị của dự án sẽ được sử dụng."
 
 #. module: project
 #: model_terms:ir.ui.view,arch_db:project.res_config_settings_view_form
@@ -3584,7 +3584,7 @@ msgstr "Dự án"
 #. module: project
 #: model:ir.model.fields,field_description:project.field_project_task__project_analytic_account_id
 msgid "Project Analytic Account"
-msgstr "Tài khoản phân tích dự án"
+msgstr "Tài khoản quản trị dự án"
 
 #. module: project
 #: model_terms:ir.ui.view,arch_db:project.project_collaborator_view_form
@@ -5106,7 +5106,7 @@ msgstr "Nhiệm vụ chưa phân công"
 #: code:addons/project/models/project.py:0
 #, python-format
 msgid "Unknown Analytic Account"
-msgstr "Không có tài khoản phân tích"
+msgstr "Tài khoản quản trị không xác định"
 
 #. module: project
 #: model:ir.model.fields,field_description:project.field_project_milestone__message_unread
