--- a/addons/purchase_stock/i18n/vi.po
+++ b/addons/purchase_stock/i18n/vi.po
@@ -160,7 +160,7 @@ msgstr "Ngày hoàn thành đơn hàng giao hàng đầu tiên."
 #. module: purchase_stock
 #: model:ir.model,name:purchase_stock.model_res_config_settings
 msgid "Config Settings"
-msgstr "Thiết lập cấu hình"
+msgstr "Thiết lập Cấu hình"
 
 #. module: purchase_stock
 #: model:ir.model,name:purchase_stock.model_res_partner
