--- a/addons/sale_expense/i18n/vi.po
+++ b/addons/sale_expense/i18n/vi.po
@@ -28,7 +28,7 @@ msgstr "# chi phí"
 #. module: sale_expense
 #: model:ir.model.fields,field_description:sale_expense.field_hr_expense__analytic_account_id
 msgid "Analytic Account"
-msgstr "Tài khoản phân tích"
+msgstr "Tài khoản quản trị"
 
 #. module: sale_expense
 #: model:ir.model.fields,field_description:sale_expense.field_hr_expense__can_be_reinvoiced
