--- a/addons/sale_timesheet/i18n/vi.po
+++ b/addons/sale_timesheet/i18n/vi.po
@@ -63,7 +63,7 @@ msgid ""
 " linked to the AA of the project, rounded to the unit."
 msgstr ""
 "% bảng chấm công có thể lập hóa đơn so với tổng số bảng chấm công được liên "
-"kết với tài khoản phân tích của dự án, được làm tròn đến hàng đơn vị."
+"kết với tài khoản quản trị của dự án, được làm tròn đến hàng đơn vị."
 
 #. module: sale_timesheet
 #: code:addons/sale_timesheet/wizard/project_create_sale_order.py:0
@@ -353,7 +353,7 @@ msgstr "Công ty"
 #. module: sale_timesheet
 #: model:ir.model,name:sale_timesheet.model_res_config_settings
 msgid "Config Settings"
-msgstr "Thiết lập cấu hình"
+msgstr "Thiết lập Cấu hình"
 
 #. module: sale_timesheet
 #: model_terms:ir.ui.view,arch_db:sale_timesheet.res_config_settings_view_form
@@ -770,7 +770,7 @@ msgid ""
 "Timesheets on contract: Invoice based on the tracked hours on the related timesheet.\n"
 "Create a task and track hours: Create a task on the sales order validation and track the work hours."
 msgstr ""
-"Đặt số lượng thứ tự theo cách thủ công: Hoá đơn dựa trên số lượng được nhập theo cách thủ công, mà không cần tạo tài khoản phân tích.\n"
+"Đặt số lượng thứ tự theo cách thủ công: Hoá đơn dựa trên số lượng được nhập theo cách thủ công, mà không cần tạo tài khoản quản trị.\n"
 "Hợp đồng chấm công: Hoá đơn dựa trên số giờ được theo dõi trên bảng chấm công có liên quan.\n"
 "Tạo một nhiệm vụ và theo dõi giờ: Tạo một nhiệm vụ trên xác nhận đơn đặt hàng bán hàng và theo dõi giờ làm việc."
 
@@ -1078,7 +1078,7 @@ msgstr "Đơn Bán"
 #. module: sale_timesheet
 #: model:ir.model.fields,field_description:sale_timesheet.field_project_task__so_analytic_account_id
 msgid "Sale Order Analytic Account"
-msgstr "Tài khoản phân tích đơn bán hàng"
+msgstr "Tài khoản quản trị đơn hàng"
 
 #. module: sale_timesheet
 #: model:ir.model.fields,field_description:sale_timesheet.field_project_sale_line_employee_map__sale_line_id
