--- a/addons/website_event_track/i18n/vi.po
+++ b/addons/website_event_track/i18n/vi.po
@@ -640,7 +640,7 @@ msgstr "Tên Công ty"
 #. module: website_event_track
 #: model:ir.model,name:website_event_track.model_res_config_settings
 msgid "Config Settings"
-msgstr "Thiết lập cấu hình"
+msgstr "Thiết lập Cấu hình"
 
 #. module: website_event_track
 #: model:mail.template,subject:website_event_track.mail_template_data_track_confirmation
