--- a/addons/website_jitsi/i18n/vi.po
+++ b/addons/website_jitsi/i18n/vi.po
@@ -67,7 +67,7 @@ msgstr "Đóng"
 #. module: website_jitsi
 #: model:ir.model,name:website_jitsi.model_res_config_settings
 msgid "Config Settings"
-msgstr "Thiết lập cấu hình"
+msgstr "Thiết lập Cấu hình"
 
 #. module: website_jitsi
 #: model:ir.model.fields,field_description:website_jitsi.field_chat_room__create_uid
