--- a/odoo/addons/base/i18n/vi.po
+++ b/odoo/addons/base/i18n/vi.po
@@ -11693,13 +11693,13 @@ msgstr "Kế toán Quản trị"
 #. module: base
 #: model:ir.module.module,shortdesc:base.module_analytic_enterprise
 msgid "Analytic Accounting Enterprise"
-msgstr "Tài khoản phân tích doanh nghiệp"
+msgstr "Kế toán Quản trị Enterprise"
 
 #. module: base
 #: model:ir.module.module,summary:base.module_mrp_account
 #: model:ir.module.module,summary:base.module_mrp_account_enterprise
 msgid "Analytic accounting in Manufacturing"
-msgstr "Tài khoản phân tích cho sản xuất"
+msgstr "Kế toán Quản trị cho Sản xuất"
 
 #. module: base
 #: model:res.country,name:base.ad
