--- a/addons/google_recaptcha/i18n/vi.po
+++ b/addons/google_recaptcha/i18n/vi.po
@@ -29,7 +29,7 @@ msgstr ""
 #. module: google_recaptcha
 #: model:ir.model,name:google_recaptcha.model_res_config_settings
 msgid "Config Settings"
-msgstr "Thiết lập cấu hình"
+msgstr "Thiết lập Cấu hình"
 
 #. module: google_recaptcha
 #: model:ir.model,name:google_recaptcha.model_ir_http
