--- a/addons/hr_timesheet/i18n/vi.po
+++ b/addons/hr_timesheet/i18n/vi.po
@@ -194,7 +194,7 @@ msgstr "<strong>Tiến trình:</strong>"
 #. module: hr_timesheet
 #: model:ir.model.fields,field_description:hr_timesheet.field_project_task__analytic_account_active
 msgid "Active Analytic Account"
-msgstr "Tài khoản phân tích đang hoạt động"
+msgstr "tài khoản quản trị được kích hoạt"
 
 #. module: hr_timesheet
 #: model:res.groups,name:hr_timesheet.group_timesheet_manager
@@ -245,8 +245,8 @@ msgid ""
 "Analytic account to which this project is linked for financial management. "
 "Use an analytic account to record cost and revenue on your project."
 msgstr ""
-"Tài khoản phân tích mà dự án này được liên kết để quản lý tài chính. Sử dụng"
-" tài khoản phân tích để ghi lại chi phí và doanh thu cho dự án của bạn."
+"Tài khoản quản trị mà dự án này được liên kết để quản lý tài chính. Sử dụng"
+" tài khoản quản trị để ghi lại chi phí và doanh thu cho dự án của bạn."
 
 #. module: hr_timesheet
 #: model_terms:ir.ui.view,arch_db:hr_timesheet.res_config_settings_view_form
@@ -1338,14 +1338,14 @@ msgid ""
 "to timesheet on the project."
 msgstr ""
 "Bạn không thể tạo nhật ký bảng chấm công cho dự án này vì nó được liên kết "
-"với tài khoản phân tích không hoạt động. Hãy thay đổi tài khoản này, hoặc "
+"với tài khoản quản trị không hoạt động. Hãy thay đổi tài khoản này, hoặc "
 "kích hoạt lại tài khoản hiện tại để tạo bảng chấm công cho dự án."
 
 #. module: hr_timesheet
 #: code:addons/hr_timesheet/models/project.py:0
 #, python-format
 msgid "You cannot use timesheets without an analytic account."
-msgstr "Bạn không thể sử dụng bảng chấm công mà không có tài khoản phân tích."
+msgstr "Bạn không thể sử dụng bảng chấm công mà không có tài khoản quản trị."
 
 #. module: hr_timesheet
 #: code:addons/hr_timesheet/models/res_company.py:0
