[I18N] *: improve Vietnamese translations

--- a/addons/hr_holidays/i18n/vi.po
+++ b/addons/hr_holidays/i18n/vi.po
@@ -2104,7 +2104,7 @@ msgstr "Tháng Một"
 #. module: hr_holidays
 #: model:ir.model.fields,field_description:hr_holidays.field_hr_leave_report_calendar__job_id
 msgid "Job"
-msgstr "Công việc"
+msgstr "Chức vụ"
 
 #. module: hr_holidays
 #: model_terms:ir.ui.view,arch_db:hr_holidays.hr_leave_report_calendar_view_search
