--- a/addons/sale_project/i18n/vi.po
+++ b/addons/sale_project/i18n/vi.po
@@ -33,7 +33,7 @@ msgstr "Tạo hoá đơn"
 #: model:ir.model.fields,field_description:sale_project.field_product_product__service_tracking
 #: model:ir.model.fields,field_description:sale_project.field_product_template__service_tracking
 msgid "Create on Order"
-msgstr "Tạo từ đơn hàng"
+msgstr "Tạo khi có đơn bán"
 
 #. module: sale_project
 #: model:ir.model.fields,field_description:sale_project.field_sale_order__visible_project
@@ -112,12 +112,12 @@ msgstr "Không dùng"
 #. module: sale_project
 #: model:ir.model.fields.selection,name:sale_project.selection__product_template__service_tracking__no
 msgid "Nothing"
-msgstr "Không có gì"
+msgstr "Không"
 
 #. module: sale_project
 #: model:ir.model.fields,field_description:sale_project.field_sale_order__project_count
 msgid "Number of Projects"
-msgstr "Số dự án"
+msgstr "Số lượng dự án"
 
 #. module: sale_project
 #: model:ir.model.fields,field_description:sale_project.field_project_task__invoice_count
@@ -318,7 +318,7 @@ msgstr ""
 #: model:ir.model,name:sale_project.model_project_task
 #: model:ir.model.fields.selection,name:sale_project.selection__product_template__service_tracking__task_global_project
 msgid "Task"
-msgstr "Công việc"
+msgstr "Nhiệm vụ"
 
 #. module: sale_project
 #: code:addons/sale_project/models/sale_order.py:0
