[I18N] *: improve Vietnamese translations

--- a/addons/hr_timesheet/i18n/vi.po
+++ b/addons/hr_timesheet/i18n/vi.po
@@ -1281,7 +1281,7 @@ msgstr "Người dùng: tất cả bảng chấm công"
 #. module: hr_timesheet
 #: model:res.groups,name:hr_timesheet.group_hr_timesheet_user
 msgid "User: own timesheets only"
-msgstr "Người dùng: chỉ sở hữu bảng chấm công"
+msgstr "Người dùng: chỉ bảng chấm công của chính mình"
 
 #. module: hr_timesheet
 #. openerp-web
