--- a/addons/project/i18n/vi.po
+++ b/addons/project/i18n/vi.po
@@ -568,7 +568,7 @@ msgid ""
 "                            </span>"
 msgstr ""
 "<span class=\"o_stat_text\">\n"
-"                                Biểu đồ chi tiết\n"
+"                                Biểu đồ Burndown\n"
 "                            </span>"
 
 #. module: project
@@ -579,7 +579,7 @@ msgstr "<span class=\"o_stat_text\">Đang chặn</span>"
 #. module: project
 #: model_terms:ir.ui.view,arch_db:project.edit_project
 msgid "<span class=\"o_stat_text\">Gross Margin</span>"
-msgstr "<span class=\"o_stat_text\">Lợi nhuận biên</span>"
+msgstr "<span class=\"o_stat_text\">Biên Lợi nhuận gộp</span>"
 
 #. module: project
 #: model_terms:ir.ui.view,arch_db:project.view_task_form2
