[I18N] website: improve Vietnamese translations

--- a/addons/website/i18n/vi.po
+++ b/addons/website/i18n/vi.po
@@ -9322,7 +9322,7 @@ msgstr "Tên được chọn đã tồn tại"
 #. module: website
 #: model_terms:ir.ui.view,arch_db:website.res_config_settings_view_form
 msgid "The company this website belongs to"
-msgstr "Công ty mà trang web này thuộc về"
+msgstr "Công ty mà trang website này thuộc về"
 
 #. module: website
 #. openerp-web
