--- a/addons/web/i18n/vi.po
+++ b/addons/web/i18n/vi.po
@@ -1131,7 +1131,7 @@ msgstr "Tiêu đề Cột"
 #: code:addons/web/static/src/webclient/user_menu/user_menu_items.xml:0
 #, python-format
 msgid "Command"
-msgstr "Lệnh"
+msgstr "Command"
 
 #. module: web
 #: model:ir.model,name:web.model_res_company
@@ -1239,7 +1239,7 @@ msgstr "Ngữ cảnh:"
 #: code:addons/web/static/src/webclient/user_menu/user_menu_items.xml:0
 #, python-format
 msgid "Control"
-msgstr "Điều khiển"
+msgstr "Control"
 
 #. module: web
 #. openerp-web
@@ -3065,7 +3065,7 @@ msgstr "Chỉ mình bạn"
 #: code:addons/web/static/src/webclient/user_menu/user_menu_items.xml:0
 #, python-format
 msgid "Open Command Palette"
-msgstr ""
+msgstr "Mở bảng lệnh"
 
 #. module: web
 #. openerp-web
@@ -3117,14 +3117,14 @@ msgstr "Mở: "
 #: code:addons/web/static/src/legacy/js/views/calendar/calendar_controller.js:0
 #, python-format
 msgid "Open: %s"
-msgstr ""
+msgstr "Mở: %s"
 
 #. module: web
 #. openerp-web
 #: code:addons/web/static/src/legacy/js/views/list/list_renderer.js:0
 #, python-format
 msgid "Optional columns"
-msgstr ""
+msgstr "Cột tùy chọn"
 
 #. module: web
 #. openerp-web
@@ -3280,7 +3280,7 @@ msgstr "Cài đặt Pivot"
 #: code:addons/web/static/src/core/ui/block_ui.js:0
 #, python-format
 msgid "Please be patient."
-msgstr ""
+msgstr "Vui lòng kiên nhẫn."
 
 #. module: web
 #. openerp-web
@@ -3419,7 +3419,7 @@ msgstr "Năm trước"
 #: code:addons/web/static/src/legacy/xml/base.xml:0
 #, python-format
 msgid "Previous menu"
-msgstr ""
+msgstr "Menu trước"
 
 #. module: web
 #. openerp-web
@@ -3447,7 +3447,7 @@ msgstr "In"
 #: code:addons/web/static/src/legacy/xml/report.xml:0
 #, python-format
 msgid "Printing options"
-msgstr ""
+msgstr "Tùy chọn in ấn"
 
 #. module: web
 #. openerp-web
@@ -3604,7 +3604,7 @@ msgstr "Đỏ"
 #: code:addons/web/static/src/legacy/xml/base.xml:0
 #, python-format
 msgid "Refresh"
-msgstr "Refresh"
+msgstr "Làm tươi"
 
 #. module: web
 #. openerp-web
@@ -3710,7 +3710,7 @@ msgstr "Bố cục bản in"
 #. module: web
 #: model:ir.actions.report,name:web.action_report_layout_preview
 msgid "Report Layout Preview"
-msgstr ""
+msgstr "Xem trước Bố cục Báo cáo"
 
 #. module: web
 #. openerp-web
@@ -3823,7 +3823,7 @@ msgstr "Lưu mặc định"
 #: code:addons/web/static/src/legacy/xml/base.xml:0
 #, python-format
 msgid "Save record"
-msgstr ""
+msgstr "Lưu bản ghi"
 
 #. module: web
 #. openerp-web
@@ -3849,14 +3849,14 @@ msgstr "Tìm kiếm thêm..."
 #: code:addons/web/static/src/core/commands/command_service.js:0
 #, python-format
 msgid "Search for a command..."
-msgstr ""
+msgstr "Tìm kiếm một lệnh..."
 
 #. module: web
 #. openerp-web
 #: code:addons/web/static/src/legacy/xml/base.xml:0
 #, python-format
 msgid "Search for records"
-msgstr ""
+msgstr "Tìm kiếm bản ghi"
 
 #. module: web
 #. openerp-web
