--- a/addons/hr_contract/i18n/vi.po
+++ b/addons/hr_contract/i18n/vi.po
@@ -676,7 +676,7 @@ msgstr "Thông điệp"
 #. module: hr_contract
 #: model_terms:ir.ui.view,arch_db:hr_contract.hr_contract_history_view_form
 msgid "Monthly Wage"
-msgstr "Lương tháng"
+msgstr "Lương tháng Cơ bản"
 
 #. module: hr_contract
 #: model:ir.model.fields,field_description:hr_contract.field_hr_contract__my_activity_date_deadline
