--- a/addons/google_recaptcha/i18n/vi.po
+++ b/addons/google_recaptcha/i18n/vi.po
@@ -24,7 +24,7 @@ msgstr ""
 #. module: google_recaptcha
 #: model_terms:ir.ui.view,arch_db:google_recaptcha.res_config_settings_view_form
 msgid "<i class=\"fa fa-arrow-right\"/> Generate reCAPTCHA v3 keys"
-msgstr ""
+msgstr "<i class=\"fa fa-arrow-right\"/> Tạo khoá reCAPTCHA v3"
 
 #. module: google_recaptcha
 #: model:ir.model,name:google_recaptcha.model_res_config_settings
@@ -39,7 +39,7 @@ msgstr "HTTP Routing"
 #. module: google_recaptcha
 #: model_terms:ir.ui.view,arch_db:google_recaptcha.res_config_settings_view_form
 msgid "If no keys are provided, no checks will be done."
-msgstr ""
+msgstr "Nếu không có khoá được cung cấp, sẽ không có kiểm tra nào thực hiện."
 
 #. module: google_recaptcha
 #: model:ir.model.fields,field_description:google_recaptcha.field_res_config_settings__recaptcha_min_score
@@ -51,26 +51,26 @@ msgstr "Điểm tối thiểu"
 #: code:addons/google_recaptcha/static/src/js/recaptcha.js:0
 #, python-format
 msgid "No recaptcha site key set."
-msgstr ""
+msgstr "Không có khoá trang recaptcha nào được thiết lập"
 
 #. module: google_recaptcha
 #. openerp-web
 #: code:addons/google_recaptcha/static/src/xml/recaptcha.xml:0
 #, python-format
 msgid "Privacy Policy"
-msgstr "Privacy Policy"
+msgstr "Chính sách Bảo mật"
 
 #. module: google_recaptcha
 #. openerp-web
 #: code:addons/google_recaptcha/static/src/xml/recaptcha.xml:0
 #, python-format
 msgid "Protected by reCAPTCHA,"
-msgstr "Protected by reCAPTCHA,"
+msgstr "Được bảo vệ bởi reCAPTCHA,"
 
 #. module: google_recaptcha
 #: model:ir.model.fields,field_description:google_recaptcha.field_res_config_settings__recaptcha_private_key
 msgid "Secret Key"
-msgstr "Secret Key"
+msgstr "Khoá bí mật"
 
 #. module: google_recaptcha
 #: model:ir.model.fields,help:google_recaptcha.field_res_config_settings__recaptcha_min_score
@@ -78,53 +78,55 @@ msgid ""
 "Should be between 0.0 and 1.0.\n"
 "1.0 is very likely a good interaction, 0.0 is very likely a bot"
 msgstr ""
+"Phải từ 0.0 đến 1.0.\n"
+"1.0 rất có thể là sự tương tác tốt, 0.0 rất có thể là bot"
 
 #. module: google_recaptcha
 #: model:ir.model.fields,field_description:google_recaptcha.field_res_config_settings__recaptcha_public_key
 msgid "Site Key"
-msgstr "Site Key"
+msgstr "Khoá trang"
 
 #. module: google_recaptcha
 #. openerp-web
 #: code:addons/google_recaptcha/static/src/xml/recaptcha.xml:0
 #, python-format
 msgid "Terms of Service"
-msgstr "Terms of Service"
+msgstr "Điều khoản Dịch vụ"
 
 #. module: google_recaptcha
 #: code:addons/google_recaptcha/models/ir_http.py:0
 #, python-format
 msgid "The reCaptcha private key is invalid."
-msgstr "The reCaptcha private key is invalid."
+msgstr "Khoá riêng tư reCaptcha không hợp lệ."
 
 #. module: google_recaptcha
 #: code:addons/google_recaptcha/models/ir_http.py:0
 #, python-format
 msgid "The reCaptcha token is invalid."
-msgstr "The reCaptcha token is invalid."
+msgstr "reCaptcha token không hợp lệ."
 
 #. module: google_recaptcha
 #. openerp-web
 #: code:addons/google_recaptcha/static/src/js/recaptcha.js:0
 #, python-format
 msgid "The recaptcha site key is invalid."
-msgstr ""
+msgstr "Khoá trang recaptcha không hợp lệ"
 
 #. module: google_recaptcha
 #: code:addons/google_recaptcha/models/ir_http.py:0
 #, python-format
 msgid "The request is invalid or malformed."
-msgstr "The request is invalid or malformed."
+msgstr "Yêu cầu không hợp lệ hoặc không đúng định dạng."
 
 #. module: google_recaptcha
 #: code:addons/google_recaptcha/models/ir_http.py:0
 #, python-format
 msgid "Your request has timed out, please retry."
-msgstr "Your request has timed out, please retry."
+msgstr "Yêu cầu của bạn đã quá thời gian chờ, vui lòng thử lại."
 
 #. module: google_recaptcha
 #. openerp-web
 #: code:addons/google_recaptcha/static/src/xml/recaptcha.xml:0
 #, python-format
 msgid "apply."
-msgstr "apply."
+msgstr "được áp dụng."
