[I18N] gamification: update Vietnamese translation Ticket: https://viindoo.com/web#id=7610&cids=1&model=helpdesk.ticket&view_type=form

--- a/addons/gamification/i18n/vi.po
+++ b/addons/gamification/i18n/vi.po
@@ -874,7 +874,7 @@ msgstr "Thay thế cho một danh sách người dùng"
 #. module: gamification
 #: model:ir.model.fields,field_description:gamification.field_gamification_challenge__challenge_category
 msgid "Appears in"
-msgstr "Xuất hiện ở"
+msgstr "Xuất hiện trong"
 
 #. module: gamification
 #: model_terms:ir.ui.view,arch_db:gamification.badge_form_view
@@ -2218,6 +2218,26 @@ msgstr "Đạt đến cấp bậc tiếp theo để có một chiếc chén xinh
 #: model_terms:gamification.karma.rank,description_motivational:gamification.rank_doctor
 msgid "Reach the next rank and gain a very nice unicorn !"
 msgstr "Đạt đến cấp bậc tiếp theo để có một chú kỳ lân dễ thương!"
+
+#. module: gamification
+#: model_terms:gamification.karma.rank,description_motivational:gamification.rank_master
+msgid "Reach the next rank and become a Master!"
+msgstr "Đạt đến thứ hạng tiếp theo để trở thành một Thạc sĩ!"
+
+#. module: gamification
+#: model_terms:gamification.karma.rank,description_motivational:gamification.rank_doctor
+msgid "Reach the next rank and become a powerful user!"
+msgstr "Đạt đến thứ hạng tiếp theo để trở thành một siêu người dùng!"
+
+#. module: gamification
+#: model_terms:gamification.karma.rank,description_motivational:gamification.rank_bachelor
+msgid "Reach the next rank to improve your status!"
+msgstr "Đạt đến thứ hạng tiếp theo để nâng cao cấp bậc của bạn!"
+
+#. module: gamification
+#: model_terms:gamification.karma.rank,description_motivational:gamification.rank_student
+msgid "Reach the next rank to show the rest of the world you exist."
+msgstr "Đạt thứ hạng tiếp theo để ''phần còn lại'' của Thế giới biết đến sự tồn tại của bạn!"
 
 #. module: gamification
 #: model:ir.model.fields.selection,name:gamification.selection__gamification_goal__state__reached
