[I18N] mass_mailing: improve translations

--- a/addons/mass_mailing/i18n/vi.po
+++ b/addons/mass_mailing/i18n/vi.po
@@ -139,7 +139,7 @@ msgstr "21 tháng 7"
 #: code:addons/mass_mailing/models/mailing.py:0
 #, python-format
 msgid "24H Stats of %(mailing_type)s \"%(mailing_name)s\""
-msgstr ""
+msgstr "Thống kê 24H cho %(mailing_type)s \"%(mailing_name)s\""
 
 #. module: mass_mailing
 #: model_terms:ir.ui.view,arch_db:mass_mailing.s_hr_options
@@ -180,6 +180,8 @@ msgid ""
 "<b>Explain the benefits you offer</b>\n"
 "            <br/>Don't write about products or services here, write about solutions."
 msgstr ""
+"<b>Giải thích lợi ích mà bạn trao tặng</b>\n"
+"            <br/>Đừng viết về sản phẩm hay dịch vụ ở đây, hãy viết về giải pháp."
 
 #. module: mass_mailing
 #: model_terms:ir.ui.view,arch_db:mass_mailing.s_coupon_code
@@ -235,7 +237,7 @@ msgstr ""
 "<i class=\"fa fa-envelope\"/> <span name=\"ab_test_manual\" attrs=\"{'invisible': [('ab_testing_winner_selection', '!=', 'manual')]}\">\n"
 "                                                    Gửi phiên bản này tới người nhận còn lại\n"
 "                                                </span> <span name=\"ab_test_auto\" attrs=\"{'invisible': [('ab_testing_winner_selection', '=', 'manual')]}\">\n"
-"                                                    Gửi bản chiến thắng bây giờ\n"
+"                                                    Gửi bản chiến thắng ngay\n"
 "                                                </span>"
 
 #. module: mass_mailing
@@ -1818,7 +1820,7 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:mass_mailing.res_config_settings_view_form
 #, python-format
 msgid "Email Marketing"
-msgstr "Tiếp thị email"
+msgstr "Email Marketing"
 
 #. module: mass_mailing
 #: model:ir.model,name:mass_mailing.model_mail_thread
