[IMP] purchase: improve translation

--- a/addons/purchase/i18n/vi.po
+++ b/addons/purchase/i18n/vi.po
@@ -559,28 +559,28 @@ msgstr "Tất cả"
 #: code:addons/purchase/static/src/xml/purchase_dashboard.xml:0
 #, python-format
 msgid "All Draft RFQs"
-msgstr "Tất cả RFQ dự thảo"
+msgstr "Tất cả YCBG dự thảo"
 
 #. module: purchase
 #. openerp-web
 #: code:addons/purchase/static/src/xml/purchase_dashboard.xml:0
 #, python-format
 msgid "All Late RFQs"
-msgstr "Tất cả RFQ trễ"
+msgstr "Tất cả YCBG trễ"
 
 #. module: purchase
 #. openerp-web
 #: code:addons/purchase/static/src/xml/purchase_dashboard.xml:0
 #, python-format
 msgid "All RFQs"
-msgstr "Tất cả RFQ"
+msgstr "Tất cả YCBG"
 
 #. module: purchase
 #. openerp-web
 #: code:addons/purchase/static/src/xml/purchase_dashboard.xml:0
 #, python-format
 msgid "All Waiting RFQs"
-msgstr "Tất cả RFQ đang chờ"
+msgstr "Tất cả YCBG đang chờ"
 
 #. module: purchase
 #: model:ir.model.fields,help:purchase.field_res_config_settings__group_send_reminder
@@ -1116,12 +1116,12 @@ msgstr "Tải xuống"
 #. module: purchase
 #: model:ir.model.fields.selection,name:purchase.selection__purchase_report__state__draft
 msgid "Draft RFQ"
-msgstr "RFQ Dự thảo"
+msgstr "YCBG Dự thảo"
 
 #. module: purchase
 #: model_terms:ir.ui.view,arch_db:purchase.view_purchase_order_filter
 msgid "Draft RFQs"
-msgstr "RFQ Dự thảo"
+msgstr "YCBG Dự thảo"
 
 #. module: purchase
 #: model:ir.model.fields,field_description:purchase.field_purchase_order__dest_address_id
@@ -1371,7 +1371,7 @@ msgstr "Các hoạt động trễ"
 #. module: purchase
 #: model_terms:ir.ui.view,arch_db:purchase.view_purchase_order_filter
 msgid "Late RFQs"
-msgstr "RFQ trễ"
+msgstr "YCBG trễ"
 
 #. module: purchase
 #. openerp-web
@@ -1529,14 +1529,14 @@ msgstr "Hạn chót hoạt động"
 #: code:addons/purchase/static/src/xml/purchase_dashboard.xml:0
 #, python-format
 msgid "My Draft RFQs"
-msgstr "RFQ dự thảo của tôi"
+msgstr "YCBG dự thảo của tôi"
 
 #. module: purchase
 #. openerp-web
 #: code:addons/purchase/static/src/xml/purchase_dashboard.xml:0
 #, python-format
 msgid "My Late RFQs"
-msgstr "RFQ bị trễ của tôi"
+msgstr "YCBG bị trễ của tôi"
 
 #. module: purchase
 #: model_terms:ir.ui.view,arch_db:purchase.purchase_order_view_search
@@ -1553,14 +1553,14 @@ msgstr "Mua hàng của tôi"
 #: code:addons/purchase/static/src/xml/purchase_dashboard.xml:0
 #, python-format
 msgid "My RFQs"
-msgstr "RFQ của tôi"
+msgstr "YCBG của tôi"
 
 #. module: purchase
 #. openerp-web
 #: code:addons/purchase/static/src/xml/purchase_dashboard.xml:0
 #, python-format
 msgid "My Waiting RFQs"
-msgstr "RFQ đang chờ của tôi"
+msgstr "YCBG đang chờ của tôi"
 
 #. module: purchase
 #: code:addons/purchase/controllers/portal.py:0
@@ -1609,7 +1609,7 @@ msgstr "Không có Thông điệp"
 #: model_terms:ir.actions.act_window,help:purchase.purchase_action_dashboard_kanban
 #: model_terms:ir.actions.act_window,help:purchase.purchase_action_dashboard_list
 msgid "No RFQs to display"
-msgstr "Không có RFQ để hiển thị"
+msgstr "Không có YCBG để hiển thị"
 
 #. module: purchase
 #: model_terms:ir.actions.act_window,help:purchase.product_normal_action_puchased
@@ -2250,7 +2250,7 @@ msgstr "Y/c Báo giá"
 #: code:addons/purchase/static/src/xml/purchase_dashboard.xml:0
 #, python-format
 msgid "RFQs Sent Last 7 Days"
-msgstr "RFQ được gửi trong 7 ngày qua"
+msgstr "YCBG được gửi trong 7 ngày qua"
 
 #. module: purchase
 #: model:ir.actions.act_window,name:purchase.act_res_partner_2_purchase_order
@@ -3044,7 +3044,7 @@ msgstr "Chờ Hoá đơn"
 #. module: purchase
 #: model_terms:ir.ui.view,arch_db:purchase.view_purchase_order_filter
 msgid "Waiting RFQs"
-msgstr "RFQ đang chờ"
+msgstr "YCBG đang chờ"
 
 #. module: purchase
 #: code:addons/purchase/models/purchase.py:0
