[I18N] mail: correct translations

--- a/addons/mail/i18n/vi.po
+++ b/addons/mail/i18n/vi.po
@@ -3915,7 +3915,7 @@ msgstr "Bố cục"
 #: model_terms:ir.ui.view,arch_db:mail.mail_channel_view_kanban
 #, python-format
 msgid "Leave"
-msgstr "Nghỉ"
+msgstr "Rời"
 
 #. module: mail
 #. openerp-web
