[I18N] project: adding translation

--- a/addons/project/i18n/vi.po
+++ b/addons/project/i18n/vi.po
@@ -1705,6 +1705,20 @@ msgid ""
 "\n"
 "In any case, an internal user with no project access rights can still access a task, provided that they are given the corresponding URL (and that they are part of the followers if the project is private)."
 msgstr ""
+"Những người có thể thấy dự án này và nhiệm vụ của nó.\n"
+"\n"
+"- Người dùng nội bộ được mời: khi được cấp quyền theo dõi một dự án, người dùng nội bộ có quyền truy cập vào tất cả các nhiệm vụ thuộc dự án đó mà không có sự phân biệt. Nếu không, họ sẽ chỉ có quyền truy cập vào các nhiệm vụ cụ thể họ được theo dõi.\n"
+" Người dùng có quyền Quản trị viên/Dự án vẫn có thể truy cập dự án này và các nhiệm vụ của dự án, ngay cả khi họ không phải là thành viên rõ ràng trong danh sách theo dõi.\n"
+"\n"
+"- Tất cả người dùng nội bộ: tất cả người dùng nội bộ đều có thể truy cập dự án và tất cả các nhiệm vụ của dự án mà không có sự phân biệt.\n"
+"\n"
+"- Người dùng cổng thông tin được mời và tất cả người dùng nội bộ: tất cả người dùng nội bộ có thể truy cập dự án và tất cả các nhiệm vụ của dự án mà không có sự phân biệt.\n"
+"khi được cấp quyền theo dõi một dự án, người dùng cổng thông tin sẽ có quyền truy cập vào tất cả các nhiệm vụ của nó mà không có sự phân biệt. Nếu không, họ sẽ chỉ có quyền truy cập vào các nhiệm vụ cụ thể mà họ được theo dõi.\n"
+"\n"
+"Khi một dự án được chia sẻ ở chế độ chỉ đọc, người dùng cổng thông tin được chuyển hướng đến cổng thông tin của họ. Họ có thể xem các nhiệm vụ, nhưng không thể sửa chúng.\n"
+"Khi một dự án được chia sẻ ở chế độ sửa, người dùng cổng thông tin được chuyển hướng đến giao diện kanban và danh sách của các nhiệm vụ. Họ có thể chỉnh sửa một số trường đã chọn trên các nhiệm vụ.\n"
+"\n"
+"Trong mọi trường hợp, người dùng nội bộ không có quyền truy cập dự án vẫn có thể truy cập một nhiệm vụ, miễn là họ được cung cấp URL tương ứng (Tuy nhiên, nếu dự án hiển thị với 'Người dùng nội bộ được mời', họ vẫn cần phải là một phần của những người theo dõi nhiệm vụ để áp dụng điều này.)."
 
 #. module: project
 #: model:ir.actions.server,name:project.unlink_project_action
