--- a/addons/phone_validation/i18n/vi.po
+++ b/addons/phone_validation/i18n/vi.po
@@ -334,7 +334,7 @@ msgstr "Số Điện thoại"
 #. module: phone_validation
 #: model:ir.model.fields,field_description:phone_validation.field_mail_thread_phone__phone_mobile_search
 msgid "Phone/Mobile"
-msgstr "Di đông/Điện thoại"
+msgstr "Di động/Điện thoại"
 
 #. module: phone_validation
 #: code:addons/phone_validation/models/mail_thread_phone.py:0
@@ -342,6 +342,7 @@ msgstr "Di đông/Điện thoại"
 msgid ""
 "Please enter at least 3 characters when searching a Phone/Mobile number."
 msgstr ""
+"Vui lòng nhập ít nhất 3 ký tự khi tìm kiếm số điện thoại / số ĐT di động."
 
 #. module: phone_validation
 #: model:ir.model.fields,field_description:phone_validation.field_phone_blacklist_remove__reason
@@ -352,7 +353,7 @@ msgstr "Lý do"
 #. module: phone_validation
 #: model:ir.model,name:phone_validation.model_phone_blacklist_remove
 msgid "Remove phone from blacklist"
-msgstr "Remove phone from blacklist"
+msgstr "Gỡ điện thoại khỏi danh sách đen"
 
 #. module: phone_validation
 #: model:ir.model.fields,field_description:phone_validation.field_mail_thread_phone__phone_sanitized
@@ -363,7 +364,7 @@ msgstr "Số đã xử lý"
 #: code:addons/phone_validation/tools/phone_validation.py:0
 #, python-format
 msgid "Unable to parse %(phone)s: %(error)s"
-msgstr "Unable to parse %(phone)s: %(error)s"
+msgstr "Không thể phân tích xử lý %(phone)s: %(error)s"
 
 #. module: phone_validation
 #: model_terms:ir.ui.view,arch_db:phone_validation.phone_blacklist_view_form
