--- a/addons/sms/i18n/vi.po
+++ b/addons/sms/i18n/vi.po
@@ -812,7 +812,7 @@ msgstr "Số điện thoại đã vào sổ đen"
 #. module: sms
 #: model:ir.model.fields,field_description:sms.field_res_partner__phone_mobile_search
 msgid "Phone/Mobile"
-msgstr "Di đông/Điện thoại"
+msgstr "Di động/Điện thoại"
 
 #. module: sms
 #: model:ir.model.fields,field_description:sms.field_sms_template__copyvalue
