[I18N] *: don't translate term 'Chat'

--- a/addons/hr/i18n/vi.po
+++ b/addons/hr/i18n/vi.po
@@ -646,7 +646,7 @@ msgstr "Thay đổi thiết lập của tôi"
 #: model_terms:ir.ui.view,arch_db:hr.hr_kanban_view_employees
 #: model_terms:ir.ui.view,arch_db:hr.view_employee_form
 msgid "Chat"
-msgstr "Nhắn tin"
+msgstr "Chat"
 
 #. module: hr
 #: model:hr.job,name:hr.job_ceo
