--- a/addons/mail/i18n/vi.po
+++ b/addons/mail/i18n/vi.po
@@ -1557,7 +1557,7 @@ msgstr "Kênh/Đối tác"
 #: model:ir.model.fields.selection,name:mail.selection__mail_channel__channel_type__chat
 #, python-format
 msgid "Chat"
-msgstr "Nhắn tin"
+msgstr "Chat"
 
 #. module: mail
 #: model:ir.actions.act_window,name:mail.mail_shortcode_action
