--- a/addons/website_event_track_live/i18n/vi.po
+++ b/addons/website_event_track_live/i18n/vi.po
@@ -31,7 +31,7 @@ msgstr ""
 #. module: website_event_track_live
 #: model_terms:ir.ui.view,arch_db:website_event_track_live.event_track_aside
 msgid "Chat"
-msgstr "Nhắn tin"
+msgstr "Chat"
 
 #. module: website_event_track_live
 #: model:ir.model.fields,help:website_event_track_live.field_event_track__is_youtube_replay
