--- a/addons/website_livechat/i18n/vi.po
+++ b/addons/website_livechat/i18n/vi.po
@@ -95,7 +95,7 @@ msgstr "Kênh"
 #: model_terms:ir.ui.view,arch_db:website_livechat.website_visitor_view_kanban
 #: model_terms:ir.ui.view,arch_db:website_livechat.website_visitor_view_tree
 msgid "Chat"
-msgstr "Nhắn tin"
+msgstr "Chat"
 
 #. module: website_livechat
 #: model_terms:ir.ui.view,arch_db:website_livechat.website_visitor_view_form
